@@ -12,14 +12,55 @@ import java.util.List;
 
 public class DatabaseBookDAO implements BookDAO {
 
-    private static final org.slf4j.Logger LOGGER = org.slf4j.LoggerFactory.getLogger(DatabaseBookDAO.class);
-    
+    private static final org.slf4j.Logger LOGGER =
+            org.slf4j.LoggerFactory.getLogger(DatabaseBookDAO.class);
+
     private final DBConnection dbConnection;
+
     private static final String TITLE = "title";
+
     private static final String[] BOOK_COLUMNS = {
-        "id", "title", "author", "category", "year", "publisher", 
-        "pages", "isbn", "stock", "plot", "image_path", "price"
+            "id", "title", "author", "category", "year", "publisher",
+            "pages", "isbn", "stock", "plot", "image_path", "price"
     };
+
+    private static final String BOOK_COLUMNS_JOINED =
+            String.join(", ", BOOK_COLUMNS);
+
+    /* ======================= SQL CONSTANTS ======================= */
+
+    private static final String SELECT_ALL_BOOKS =
+            "SELECT " + BOOK_COLUMNS_JOINED + " FROM books ORDER BY title";
+
+    private static final String SELECT_BOOK_BY_ID =
+            "SELECT " + BOOK_COLUMNS_JOINED + " FROM books WHERE id = ?";
+
+    private static final String SELECT_AVAILABLE_BOOKS =
+            "SELECT " + BOOK_COLUMNS_JOINED + " FROM books WHERE stock > 0 ORDER BY title";
+
+    private static final String SELECT_BOOKS_BY_CATEGORY =
+            "SELECT " + BOOK_COLUMNS_JOINED + " FROM books WHERE category = ? ORDER BY title";
+
+    private static final String SELECT_BOOKS_BY_AUTHOR =
+            "SELECT " + BOOK_COLUMNS_JOINED + " FROM books WHERE author LIKE ? ORDER BY year DESC, title";
+
+    private static final String INSERT_BOOK =
+            "INSERT INTO books (title, author, category, year, publisher, pages, isbn, stock, plot, image_path, price) " +
+            "VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)";
+
+    private static final String UPDATE_BOOK =
+            "UPDATE books SET title=?, author=?, category=?, year=?, publisher=?, pages=?, isbn=?, stock=?, plot=?, image_path=?, price=? WHERE id=?";
+
+    private static final String DELETE_BOOK =
+            "DELETE FROM books WHERE id=?";
+
+    private static final String UPDATE_STOCK =
+            "UPDATE books SET stock = stock + ? WHERE id = ?";
+
+    private static final String CHECK_AVAILABILITY =
+            "SELECT stock FROM books WHERE id = ?";
+
+    /* ============================================================= */
 
     public DatabaseBookDAO(DBConnection dbConnection) {
         this.dbConnection = dbConnection;
@@ -27,140 +68,31 @@ public class DatabaseBookDAO implements BookDAO {
 
     @Override
     public List<Book> getAllBooks() throws DAOException {
-        List<Book> books = new ArrayList<>();
-        String sql = "SELECT " + String.join(", ", BOOK_COLUMNS) + " FROM books ORDER BY title";
-
-        try (Connection conn = dbConnection.getConnection();
-             Statement stmt = conn.createStatement();
-             ResultSet rs = stmt.executeQuery(sql)) {
-
-            while (rs.next()) {
-                books.add(extractBookFromResultSet(rs));
-            }
-            return books;
-
-        } catch (SQLException e) {
-            LOGGER.error("Errore durante il recupero di tutti i libri", e);
-            throw new DAOException("Errore durante il recupero di tutti i libri", e);
-        }
+        return executeBookListQuery(SELECT_ALL_BOOKS, null);
     }
 
     @Override
     public Book getBookById(int id) throws DAOException {
-        String sql = "SELECT " + String.join(", ", BOOK_COLUMNS) + " FROM books WHERE id = ?";
-
-        try (Connection conn = dbConnection.getConnection();
-             PreparedStatement stmt = conn.prepareStatement(sql)) {
-
-            stmt.setInt(1, id);
-            ResultSet rs = stmt.executeQuery();
-
-            if (rs.next()) {
-                return extractBookFromResultSet(rs);
-            } else {
-                throw new RecordNotFoundException("Libro con ID " + id + " non trovato.");
-            }
-
-        } catch (SQLException e) {
-            LOGGER.error("Errore durante il caricamento del libro con ID {}", id, e);
-            throw new DAOException("Errore durante il caricamento del libro con ID " + id, e);
-        }
+        return executeSingleBookQuery(SELECT_BOOK_BY_ID, stmt -> stmt.setInt(1, id),
+                "Libro con ID " + id + " non trovato");
     }
 
     @Override
-    public void addBook(Book book) throws DAOException {
-        String sql = "INSERT INTO books (title, author, category, year, publisher, pages, isbn, stock, plot, image_path, price) " +
-                     "VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)";
-
-        try (Connection conn = dbConnection.getConnection();
-             PreparedStatement stmt = conn.prepareStatement(sql, Statement.RETURN_GENERATED_KEYS)) {
-
-            fillBookPreparedStatement(stmt, book);
-            stmt.executeUpdate();
-
-            try (ResultSet generatedKeys = stmt.getGeneratedKeys()) {
-                if (generatedKeys.next()) {
-                    book.setId(generatedKeys.getInt(1));
-                }
-            }
-
-        } catch (SQLException e) {
-            if (isDuplicateError(e)) {
-                String duplicateType = detectDuplicateType(e, book);
-                throw new DuplicateBookException(book.getIsbn(), book.getTitle(), duplicateType);
-            }
-            LOGGER.error("Errore durante l'aggiunta del libro: {}", book.getTitle(), e);
-            throw new DAOException("Errore durante l'aggiunta del libro: " + book.getTitle(), e);
-        }
-    }
-    
-    private boolean isDuplicateError(SQLException e) {
-        return e.getErrorCode() == 1062 || 
-               e.getMessage() != null && 
-               e.getMessage().contains("Duplicate entry");
-    }
-    
-    private String detectDuplicateType(SQLException e, Book book) {
-        if (e.getMessage() == null) return "unknown";
-        
-        String message = e.getMessage().toLowerCase();
-        if (message.contains("isbn")) {
-            return "isbn";
-        }
-        return TITLE;
-    }
-
-    @Override
-    public void updateBook(Book book) throws DAOException {
-        String sql = "UPDATE books SET title=?, author=?, category=?, year=?, publisher=?, pages=?, isbn=?, stock=?, plot=?, image_path=?, price=? WHERE id=?";
-        
-        try (Connection conn = dbConnection.getConnection();
-             PreparedStatement stmt = conn.prepareStatement(sql)) {
-
-            fillBookPreparedStatement(stmt, book);
-            stmt.setInt(12, book.getId());
-
-            int rows = stmt.executeUpdate();
-            if (rows == 0) {
-                throw new RecordNotFoundException("Impossibile aggiornare: nessun libro con ID " + book.getId());
-            }
-
-        } catch (SQLException e) {
-            LOGGER.error("Errore durante l'aggiornamento del libro ID {}", book.getId(), e);
-            throw new DAOException("Errore durante l'aggiornamento del libro ID " + book.getId(), e);
-        }
-    }
-
-    @Override
-    public void deleteBook(int id) throws DAOException {
-        String sql = "DELETE FROM books WHERE id=?";
-
-        try (Connection conn = dbConnection.getConnection();
-             PreparedStatement stmt = conn.prepareStatement(sql)) {
-
-            stmt.setInt(1, id);
-            int rows = stmt.executeUpdate();
-
-            if (rows == 0) {
-                throw new RecordNotFoundException("Nessun libro trovato con ID " + id + " da eliminare.");
-            }
-
-        } catch (SQLException e) {
-            LOGGER.error("Errore durante l'eliminazione del libro ID {}", id, e);
-            throw new DAOException("Errore durante l'eliminazione del libro ID " + id, e);
-        }
-    }
-
-    @Override
-    public List<Book> searchBooks(String searchText, String searchMode, String category,
-                                  String yearFrom, String yearTo, boolean includeUnavailable)
-            throws DAOException {
+    public List<Book> searchBooks(String searchText,
+                                  String searchMode,
+                                  String category,
+                                  String yearFrom,
+                                  String yearTo,
+                                  boolean includeUnavailable) throws DAOException {
 
         List<Book> books = new ArrayList<>();
-        StringBuilder sql = new StringBuilder("SELECT " + String.join(", ", BOOK_COLUMNS) + " FROM books WHERE 1=1 ");
+        StringBuilder sql = new StringBuilder(
+                "SELECT " + BOOK_COLUMNS_JOINED + " FROM books WHERE 1=1 "
+        );
+
         List<Object> params = new ArrayList<>();
 
-        if (searchText != null && !searchText.trim().isEmpty()) {
+        if (searchText != null && !searchText.isBlank()) {
             if (TITLE.equalsIgnoreCase(searchMode)) {
                 sql.append("AND LOWER(title) LIKE ? ");
                 params.add("%" + searchText.toLowerCase() + "%");
@@ -170,17 +102,17 @@ public class DatabaseBookDAO implements BookDAO {
             }
         }
 
-        if (category != null && !category.trim().isEmpty()) {
+        if (category != null && !category.isBlank()) {
             sql.append("AND category = ? ");
             params.add(category);
         }
 
-        if (yearFrom != null && !yearFrom.trim().isEmpty()) {
+        if (yearFrom != null && !yearFrom.isBlank()) {
             sql.append("AND year >= ? ");
             params.add(Integer.parseInt(yearFrom));
         }
-        
-        if (yearTo != null && !yearTo.trim().isEmpty()) {
+
+        if (yearTo != null && !yearTo.isBlank()) {
             sql.append("AND year <= ? ");
             params.add(Integer.parseInt(yearTo));
         }
@@ -210,126 +142,162 @@ public class DatabaseBookDAO implements BookDAO {
             throw new DAOException("Errore durante la ricerca dei libri", e);
         }
     }
+    
+    @Override
+    public void addBook(Book book) throws DAOException {
+        try (Connection conn = dbConnection.getConnection();
+             PreparedStatement stmt = conn.prepareStatement(INSERT_BOOK, Statement.RETURN_GENERATED_KEYS)) {
+
+            fillBookPreparedStatement(stmt, book);
+            stmt.executeUpdate();
+
+            try (ResultSet keys = stmt.getGeneratedKeys()) {
+                if (keys.next()) {
+                    book.setId(keys.getInt(1));
+                }
+            }
+
+        } catch (SQLException e) {
+            if (isDuplicateError(e)) {
+                throw new DuplicateBookException(book.getIsbn(), book.getTitle(), detectDuplicateType(e));
+            }
+            throw new DAOException("Errore durante l'aggiunta del libro " + book.getTitle(), e);
+        }
+    }
+
+    @Override
+    public void updateBook(Book book) throws DAOException {
+        try (Connection conn = dbConnection.getConnection();
+             PreparedStatement stmt = conn.prepareStatement(UPDATE_BOOK)) {
+
+            fillBookPreparedStatement(stmt, book);
+            stmt.setInt(12, book.getId());
+
+            if (stmt.executeUpdate() == 0) {
+                throw new RecordNotFoundException("Nessun libro con ID " + book.getId());
+            }
+
+        } catch (SQLException e) {
+            throw new DAOException("Errore durante l'aggiornamento del libro ID " + book.getId(), e);
+        }
+    }
+
+    @Override
+    public void deleteBook(int id) throws DAOException {
+        try (Connection conn = dbConnection.getConnection();
+             PreparedStatement stmt = conn.prepareStatement(DELETE_BOOK)) {
+
+            stmt.setInt(1, id);
+
+            if (stmt.executeUpdate() == 0) {
+                throw new RecordNotFoundException("Libro con ID " + id + " non trovato");
+            }
+
+        } catch (SQLException e) {
+            throw new DAOException("Errore durante l'eliminazione del libro ID " + id, e);
+        }
+    }
+
+    @Override
+    public boolean isBookAvailable(int bookId) throws DAOException {
+        try (Connection conn = dbConnection.getConnection();
+             PreparedStatement stmt = conn.prepareStatement(CHECK_AVAILABILITY)) {
+
+            stmt.setInt(1, bookId);
+            ResultSet rs = stmt.executeQuery();
+            return rs.next() && rs.getInt("stock") > 0;
+
+        } catch (SQLException e) {
+            throw new DAOException("Errore controllo disponibilità libro ID " + bookId, e);
+        }
+    }
 
     @Override
     public void updateStock(int bookId, int quantity) throws DAOException {
-        String sql = "UPDATE books SET stock = stock + ? WHERE id = ?";
-        
         try (Connection conn = dbConnection.getConnection();
-             PreparedStatement stmt = conn.prepareStatement(sql)) {
+             PreparedStatement stmt = conn.prepareStatement(UPDATE_STOCK)) {
 
             stmt.setInt(1, quantity);
             stmt.setInt(2, bookId);
             stmt.executeUpdate();
 
         } catch (SQLException e) {
-            LOGGER.error("Errore durante l'aggiornamento dello stock per il libro ID {}", bookId, e);
-            throw new DAOException("Errore durante l'aggiornamento dello stock per il libro ID " + bookId, e);
-        }
-    }
-
-    @Override
-    public boolean isBookAvailable(int bookId) throws DAOException {
-        String sql = "SELECT stock FROM books WHERE id = ?";
-        
-        try (Connection conn = dbConnection.getConnection();
-             PreparedStatement stmt = conn.prepareStatement(sql)) {
-
-            stmt.setInt(1, bookId);
-            ResultSet rs = stmt.executeQuery();
-            
-            if (rs.next()) {
-                return rs.getInt("stock") > 0;
-            }
-            return false;
-
-        } catch (SQLException e) {
-            LOGGER.error("Errore durante il controllo disponibilità del libro ID {}", bookId, e);
-            throw new DAOException("Errore durante il controllo disponibilità del libro ID " + bookId, e);
+            throw new DAOException("Errore aggiornamento stock libro ID " + bookId, e);
         }
     }
 
     @Override
     public List<Book> getBooksByCategory(String category) throws DAOException {
-        List<Book> books = new ArrayList<>();
-        String sql = "SELECT " + String.join(", ", BOOK_COLUMNS) + " FROM books WHERE category = ? ORDER BY title";
-        
-        try (Connection conn = dbConnection.getConnection();
-             PreparedStatement stmt = conn.prepareStatement(sql)) {
-
-            stmt.setString(1, category);
-            ResultSet rs = stmt.executeQuery();
-            
-            while (rs.next()) {
-                books.add(extractBookFromResultSet(rs));
-            }
-            
-            return books;
-
-        } catch (SQLException e) {
-            LOGGER.error("Errore durante il recupero dei libri per categoria {}", category, e);
-            throw new DAOException("Errore durante il recupero dei libri per categoria " + category, e);
-        }
+        return executeBookListQuery(SELECT_BOOKS_BY_CATEGORY,
+                stmt -> stmt.setString(1, category));
     }
 
     @Override
     public List<Book> getBooksByAuthor(String author) throws DAOException {
-        List<Book> books = new ArrayList<>();
-        String sql = "SELECT " + String.join(", ", BOOK_COLUMNS) + " FROM books WHERE author LIKE ? ORDER BY year DESC, title";
-        
-        try (Connection conn = dbConnection.getConnection();
-             PreparedStatement stmt = conn.prepareStatement(sql)) {
-
-            stmt.setString(1, "%" + author + "%");
-            ResultSet rs = stmt.executeQuery();
-            
-            while (rs.next()) {
-                books.add(extractBookFromResultSet(rs));
-            }
-            
-            return books;
-
-        } catch (SQLException e) {
-            LOGGER.error("Errore durante il recupero dei libri per autore {}", author, e);
-            throw new DAOException("Errore durante il recupero dei libri per autore " + author, e);
-        }
+        return executeBookListQuery(SELECT_BOOKS_BY_AUTHOR,
+                stmt -> stmt.setString(1, "%" + author + "%"));
     }
 
     @Override
     public List<Book> getAvailableBooks() throws DAOException {
-        List<Book> books = new ArrayList<>();
-        String sql = "SELECT " + String.join(", ", BOOK_COLUMNS) + " FROM books WHERE stock > 0 ORDER BY title";
-        
-        try (Connection conn = dbConnection.getConnection();
-             Statement stmt = conn.createStatement();
-             ResultSet rs = stmt.executeQuery(sql)) {
+        return executeBookListQuery(SELECT_AVAILABLE_BOOKS, null);
+    }
 
+    /* ======================= HELPERS ======================= */
+
+    private List<Book> executeBookListQuery(String sql, StatementFiller filler) throws DAOException {
+        List<Book> books = new ArrayList<>();
+        try (Connection conn = dbConnection.getConnection();
+             PreparedStatement stmt = conn.prepareStatement(sql)) {
+
+            if (filler != null) {
+                filler.fill(stmt);
+            }
+
+            ResultSet rs = stmt.executeQuery();
             while (rs.next()) {
                 books.add(extractBookFromResultSet(rs));
             }
-            
             return books;
 
         } catch (SQLException e) {
-            LOGGER.error("Errore durante il recupero dei libri disponibili", e);
-            throw new DAOException("Errore durante il recupero dei libri disponibili", e);
+            throw new DAOException("Errore esecuzione query libri", e);
+        }
+    }
+
+    private Book executeSingleBookQuery(String sql, StatementFiller filler, String notFoundMsg)
+            throws DAOException {
+
+        try (Connection conn = dbConnection.getConnection();
+             PreparedStatement stmt = conn.prepareStatement(sql)) {
+
+            filler.fill(stmt);
+            ResultSet rs = stmt.executeQuery();
+
+            if (rs.next()) {
+                return extractBookFromResultSet(rs);
+            }
+            throw new RecordNotFoundException(notFoundMsg);
+
+        } catch (SQLException e) {
+            throw new DAOException("Errore recupero libro", e);
         }
     }
 
     private Book extractBookFromResultSet(ResultSet rs) throws SQLException {
         return new Book(
-            rs.getInt("id"),
-            rs.getString(TITLE),
-            rs.getString("author"),
-            rs.getString("category"),
-            rs.getInt("year"),
-            rs.getString("publisher"),
-            rs.getInt("pages"),
-            rs.getString("isbn"),
-            rs.getInt("stock"),
-            rs.getString("plot"),
-            rs.getString("image_path"),
-            rs.getDouble("price")
+                rs.getInt("id"),
+                rs.getString(TITLE),
+                rs.getString("author"),
+                rs.getString("category"),
+                rs.getInt("year"),
+                rs.getString("publisher"),
+                rs.getInt("pages"),
+                rs.getString("isbn"),
+                rs.getInt("stock"),
+                rs.getString("plot"),
+                rs.getString("image_path"),
+                rs.getDouble("price")
         );
     }
 
@@ -346,5 +314,18 @@ public class DatabaseBookDAO implements BookDAO {
         stmt.setString(10, book.getImagePath());
         stmt.setDouble(11, book.getPrice());
     }
-    
+
+    private boolean isDuplicateError(SQLException e) {
+        return e.getErrorCode() == 1062;
+    }
+
+    private String detectDuplicateType(SQLException e) {
+        return e.getMessage() != null && e.getMessage().toLowerCase().contains("isbn")
+                ? "isbn" : TITLE;
+    }
+
+    @FunctionalInterface
+    private interface StatementFiller {
+        void fill(PreparedStatement stmt) throws SQLException;
+    }
 }
